# pet-project-authentication-feature

./: .gitignore  .ignore  README.md  database.db  db.db  manage.py  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish  activate.nu
auth_feature/: apps.py  forms.py  managers.py  models.py  urls.py  views.py
auth_feature/migrations/: 0001_initial.py  0002_alter_myuser_date_joined.py  0003_alter_myuser_birthdate.py  0004_alter_myuser_birthdate.py  0005_alter_myuser_birthdate_alter_myuser_username.py  0006_alter_myuser_birthdate_alter_myuser_username.py
django_authentication_feature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
setup_proj/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
templates/auth_forms/: login.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  signup.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
users/migrations/: 0001_initial.py
